@@ -43,6 +43,7 @@ All:
 - Define wxOVERRIDE as override for supporting compilers (Thomas Goyne).
 - Allow specifying custom comparator for wxSortedArrayString (Catalin Raceanu).
 - Add wxDateTime::GetWeekBasedYear().
+- Specialize std::hash<> for wxString when using C++11.
 
 Unix:
 
